# mayana

./: README.md  cli.py  cli.pyi  pyproject.toml  rich_testing.py  setup.py
constants/: country.json  name.json  name_parts.json  states.json
helper/: __init__.py
helper/decorators/: retry.py  retry.pyi  timeing.pyi
helper/fake/: name.py  password.py  phone.py
mayana/: __init__.py
mayana/decorators/: __init__.py  logger.py  retry.py  timeing.py
mayana/fake/: country.py  dob.py  ip.py  name.py  password.py  phone.py  pin_code.py  placeholder.py  states.py
test/: __init__.py
test/test_fake/: test_dob.py  test_name.py  test_password.py  test_phone.py
utils/: loader.py
