[tool.poetry]
name = "mayana"
version = "0.1.0"
package-mode = true
description = ""
authors = ["Katiyarkarelaking <karelaking277@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.2.0"
parameterized = "^0.9.0"
numpy = "^2.0.0"
termcolor = "^2.4.0"
pyfiglet = "^1.0.2"

pygments = "^2.18.0"
click = "^8.1.7"
pandas = "^2.2.2"
rich = "^13.7.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mayana = "cli:main" # Entry point to the cli
